chore: add permissions for content read access in workflows

--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
       - uses: micnncim/action-label-syncer@v1
