test: mark time-based tests with @pytest.mark.slow
Addresses CodeRabbit feedback about CI flakiness risk. Time-based
assertions (<20ms, <2ms) can fail on slow CI runners. The slow marker
allows selective skipping: pytest -m "not slow"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ python_classes = ["Test*"]
 python_functions = ["test_*"]
 markers = [
     "benchmark: Performance benchmark tests (may vary with system load)",
+    "slow: Tests with time-based assertions (may be flaky on slow CI runners)",
 ]
 addopts = [
     "-ra",
