--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,5 +13,15 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: googleapis/release-please-action@v4
+      # v1 current as of 2025-12-01
+      - uses: actions/create-github-app-token@v7e473efe3cb98aa54f8d4bac15400b15fad77d94
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
+      # v4 current as of 2025-12-01
+      - uses: googleapis/release-please-action@v16a9c90856f42705d54a6fda1823352bdc62cf38
         id: release
+        with:
+          token: ${{ steps.app-token.outputs.token }}
