--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,9 +64,7 @@ jobs:
         ./osv-scanner --lockfile=uv.lock || true
 
     - name: semgrep
-      uses: semgrep/semgrep-action@v1
-      with:
-        config: p/security-audit p/python
+      run: uvx semgrep scan --config p/security-audit --config p/python
 
     - name: gitleaks
       uses: gitleaks/gitleaks-action@v2.3.9
