--- a/data/rules/07_container_security.yaml
+++ b/data/rules/07_container_security.yaml
@@ -35,6 +35,9 @@ rules:
       - 'nsenter\s+[^;|&]*-t\s+1'
       # Podman privileged
       - 'podman.{0,200}--privileged'
+      # Kubectl privileged operations
+      - 'kubectl\s+exec[^;|&]*--privileged'
+      - 'kubectl\s+run[^;|&]*--privileged'
     alternatives: ["Use proper container security", "Avoid privileged containers", "Use security policies"]
 
   # ============================================================
