--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -90,3 +90,20 @@
 - name: breaking
   color: b60205
   description: Breaking change
+
+# Automation (release-please, dependabot)
+- name: "autorelease: pending"
+  color: ededed
+  description: Release-please pending release
+
+- name: "autorelease: tagged"
+  color: ededed
+  description: Release-please tagged release
+
+- name: dependencies
+  color: 0366d6
+  description: Dependency updates
+
+- name: github_actions
+  color: 24292e
+  description: GitHub Actions updates
