fix(security): close P0 bypass vectors from security review
AST-based pipeline detection:
- Add _detect_dangerous_pipelines() using bashlex AST analysis
- Immune to env var prefixes (curl | VAR=x sh), redirects, paths
- Catches curl|sh patterns regardless of obfuscation

FINDING-001: Missing download tools
- Added: ftp, tftp, sftp, scp, rsync, git, svn, hg

FINDING-002: Missing interpreters (critical: env bypass)
- Added: env, xargs, lua, php, pwsh, Rscript, tclsh, gawk, busybox
- `curl url | env bash` was a complete bypass - now blocked

FINDING-003: Homebrew tap patterns
- Added homebrew_tap_install (HIGH) for third-party taps
- Added homebrew_install (MEDIUM) for official formulae
- Fixed regex to match dots in GitHub usernames (user.org/tap)

Test coverage: 9 new tests in TestSecurityReviewFindings and
TestHomebrewSupplyChain classes (941 total, 90% coverage)

--- a/data/rules/10_development_workflows.yaml
+++ b/data/rules/10_development_workflows.yaml
@@ -97,6 +97,34 @@ rules:
       - "Review build scripts before running"
       - "Install to user directory with PREFIX"
 
+  - name: homebrew_tap_install
+    description: Installing from third-party Homebrew taps executes code from arbitrary GitHub repos
+    risk_level: HIGH
+    patterns:
+      # brew install from tap (user/repo/formula format)
+      # Character class includes dots for GitHub usernames like "user.org" (FINDING-003)
+      - 'brew\s+install\s+[^;|&]*[a-zA-Z0-9._-]+/[a-zA-Z0-9._-]+/[a-zA-Z0-9._-]+'
+      - 'brew\s+install\s+[^;|&]*--cask\s+[a-zA-Z0-9._-]+/[a-zA-Z0-9._-]+'
+      # brew tap adds arbitrary GitHub repos as package sources
+      - 'brew\s+tap\s+[a-zA-Z0-9._-]+/[a-zA-Z0-9._-]+'
+    alternatives:
+      - "Verify the tap repository before adding"
+      - "Use official Homebrew formulae when available"
+      - "Review the formula source code"
+
+  - name: homebrew_install
+    description: Homebrew install downloads and executes install scripts
+    risk_level: MEDIUM
+    patterns:
+      # Regular brew install (official formulae)
+      - 'brew\s+install\s+(?![^;|&]*[a-zA-Z0-9._-]+/[a-zA-Z0-9._-]+)'
+      - 'brew\s+install\s+--cask\s+(?![^;|&]*[a-zA-Z0-9._-]+/[a-zA-Z0-9._-]+)'
+      # brew upgrade can change binaries
+      - 'brew\s+upgrade'
+    alternatives:
+      - "Review what will be installed with 'brew info'"
+      - "Check formula source with 'brew cat'"
+
   - name: package_installation_system
     description: System-wide package installation
     risk_level: MEDIUM
