--- a/data/rules/06_network_security.yaml
+++ b/data/rules/06_network_security.yaml
@@ -6,23 +6,46 @@ rules:
   - name: network_backdoor
     description: Prevent network backdoor creation via netcat/socat
     risk_level: BLOCKED
-    patterns: ['nc\s+[^;|&]{0,100}-e\s+', 'ncat\s+[^;|&]{0,100}--exec', 'socat[^;|&]{0,100}EXEC:', 'netcat\s+[^;|&]{0,100}-e']
+    patterns: ['\bnc\s+[^;|&]{0,100}-e\s+', '\bncat\s+[^;|&]{0,100}--exec', '\bsocat[^;|&]{0,100}EXEC:', '\bnetcat\s+[^;|&]{0,100}-e']
     alternatives: ["Use proper remote access tools", "Set up SSH with key authentication", "Use VPN for remote access"]
+
+  - name: bash_reverse_shell
+    description: Bash /dev/tcp reverse shell requires no external tools
+    risk_level: BLOCKED
+    patterns:
+      # /dev/tcp and /dev/udp are bash builtins for network connections
+      - '/dev/tcp/'
+      - '/dev/udp/'
+      # Telnet-based reverse shells
+      - '\btelnet\s+[^;|&]+\|\s*[^;|&]*(bash|sh|zsh|ksh)\b'
+      - '\b(bash|sh|zsh|ksh)\s*\|[^;|&]*\btelnet\b'
+    alternatives: ["Use SSH for legitimate remote access", "This pattern is commonly used for reverse shells"]
+
+  - name: nested_shell_execution
+    description: Shell -c flag can execute arbitrary commands including blocked ones
+    risk_level: BLOCKED
+    patterns:
+      # bash/sh -c with dangerous commands inside
+      - '\b(bash|sh|zsh|ksh|dash)\s+-c\s+[''"].*\b(nc|ncat|netcat|socat)\s+.*-e'
+      - '\b(bash|sh|zsh|ksh|dash)\s+-c\s+[''"].*\brm\s+-rf\s+/'
+      - '\b(bash|sh|zsh|ksh|dash)\s+-c\s+[''"].*\bchmod\s+[47][0-7]{2}'
+      - '\b(bash|sh|zsh|ksh|dash)\s+-c\s+[''"].*\bsudo\b'
+    alternatives: ["Run commands directly instead of wrapping in shell -c", "Review the nested command for safety"]
 
   - name: network_service_exposure
     description: Exposing network services can create security holes
     risk_level: HIGH
-    patterns: ['python[23]?\s+-m\s+(http\.server|SimpleHTTPServer)', 'php\s+-S\s+[0-9.:\[\]]{1,50}', 'ruby\s+-run\s+-e\s+httpd', 'busybox\s+httpd', 'nc\s+.{0,100}-l.{0,100}-p?\s*[0-9]{1,5}', 'ncat\s+.{0,100}--listen', 'socat\s+.{0,100}TCP-LISTEN:', 'ssh\s+.{0,100}-[RLD]\s*[0-9]{1,5}:']
+    patterns: ['\bpython[23]?\s+-m\s+(http\.server|SimpleHTTPServer)', '\bphp\s+-S\s+[0-9.:\[\]]{1,50}', '\bruby\s+-run\s+-e\s+httpd', '\bbusybox\s+httpd', '\bnc\s+.{0,100}-l.{0,100}-p?\s*[0-9]{1,5}', '\bncat\s+.{0,100}--listen', '\bsocat\s+.{0,100}TCP-LISTEN:', '\bssh\s+.{0,100}-[RLD]\s*[0-9]{1,5}:']
     alternatives: ["Use proper web servers with authentication", "Limit to localhost", "Use firewalls"]
 
   - name: open_network_ports
     description: Prevent opening dangerous network ports
     risk_level: HIGH
-    patterns: ['iptables.{0,200}ACCEPT', 'ufw\s+allow', 'firewall-cmd.{0,100}--add-port']
+    patterns: ['\biptables.{0,200}ACCEPT', '\bufw\s+allow', '\bfirewall-cmd.{0,100}--add-port']
     alternatives: ["Use security groups", "Implement proper ACLs"]
 
   - name: data_exfiltration
     description: Data exfiltration patterns
     risk_level: HIGH
-    patterns: ['curl\s+.{0,100}(-F|--form).{0,100}@', 'curl\s+.{0,100}(--upload-file|-T)', 'wget\s+.{0,100}--post-file', 'tar\s+.{0,100}\|\s*.{0,50}(nc|ncat|socat|ssh)', 'base64\s+.{0,100}\|\s*.{0,50}curl', 'openssl\s+enc.{0,100}\|\s*.{0,50}(nc|curl)', 'zip\s+-P.{0,100}\|\s*.{0,50}curl', 'scp\s+.{0,200}@.{0,100}:', 'rsync\s+.{0,200}@.{0,100}:']
+    patterns: ['\bcurl\s+.{0,100}(-F|--form).{0,100}@', '\bcurl\s+.{0,100}(--upload-file|-T)', '\bwget\s+.{0,100}--post-file', '\btar\s+.{0,100}\|\s*.{0,50}\b(nc|ncat|socat|ssh)\b', '\bbase64\s+.{0,100}\|\s*.{0,50}\bcurl\b', '\bopenssl\s+enc.{0,100}\|\s*.{0,50}\b(nc|curl)\b', '\bzip\s+-P.{0,100}\|\s*.{0,50}\bcurl\b', '\bscp\s+.{0,200}@.{0,100}:', '\brsync\s+.{0,200}@.{0,100}:']
     alternatives: ["Use secure file transfer", "Verify destination", "Use encryption"]
