--- a/data/rules/09_log_tampering.yaml
+++ b/data/rules/09_log_tampering.yaml
@@ -6,7 +6,7 @@ rules:
   - name: log_tampering
     description: System log manipulation hides malicious activity
     risk_level: HIGH
-    patterns: ['>\s*/var/log/[^|&;]{1,200}', 'rm\s+.{0,100}/var/log/[^|&;]{1,200}', 'truncate\s+.{0,100}/var/log/', 'echo\s+.{0,100}>\s*/var/log/', 'shred\s+.{0,100}/var/log/', 'history\s+-c', 'unset\s+HISTFILE', 'export\s+HISTSIZE=0', 'ln\s+-sf\s+/dev/null\s+.{0,100}\.bash_history']
+    patterns: ['>\s*/var/log/[^|&;]{1,200}', '\brm\s+.{0,100}/var/log/[^|&;]{1,200}', '\btruncate\s+.{0,100}/var/log/', '\becho\s+.{0,100}>\s*/var/log/', '\bshred\s+.{0,100}/var/log/', '\bhistory\s+-c', '\bunset\s+HISTFILE', '\bexport\s+HISTSIZE=0', '\bln\s+-sf\s+/dev/null\s+.{0,100}\.bash_history']
     alternatives: ["Use log rotation tools", "Preserve audit trails", "Use centralized logging"]
 
   # ============================================================
@@ -18,21 +18,21 @@ rules:
     risk_level: BLOCKED
     patterns:
       # HISTFILE redirection to /dev/null
-      - 'HISTFILE\s*=\s*/dev/null'
-      - 'HISTFILE\s*=\s*[''"]?/dev/null'
-      - 'export\s+HISTFILE\s*=\s*/dev/null'
+      - '\bHISTFILE\s*=\s*/dev/null'
+      - '\bHISTFILE\s*=\s*[''"]?/dev/null'
+      - '\bexport\s+HISTFILE\s*=\s*/dev/null'
       # HISTFILESIZE manipulation
-      - 'HISTFILESIZE\s*=\s*0'
-      - 'export\s+HISTFILESIZE\s*=\s*0'
+      - '\bHISTFILESIZE\s*=\s*0'
+      - '\bexport\s+HISTFILESIZE\s*=\s*0'
       # Direct history file truncation
       - '>\s*~/?\.(bash_history|zsh_history|zsh-history)'
-      - 'cat\s+/dev/null\s*>\s*~/?\.(bash_history|zsh_history)'
+      - '\bcat\s+/dev/null\s*>\s*~/?\.(bash_history|zsh_history)'
       # Other shell histories
       - '>\s*~/?\.(zsh_history|fish_history|ash_history)'
-      - 'rm\s+[^;|&]*\.(bash_history|zsh_history|fish_history)'
+      - '\brm\s+[^;|&]*\.(bash_history|zsh_history|fish_history)'
       # Shell option manipulation
-      - 'set\s+\+o\s+history'
-      - 'shopt\s+-u\s+histappend'
+      - '\bset\s+\+o\s+history'
+      - '\bshopt\s+-u\s+histappend'
     alternatives:
       - "History manipulation indicates malicious intent"
       - "Audit trails should be preserved"
