fix: address PR review feedback
- Fix SSH authorized_keys regex: ~/?\.ssh/ instead of ~/?\.(ssh/)
- Add case-insensitive matching for socat EXEC:/SYSTEM: protocols
- Add tee -a pattern for SSH authorized_keys injection

--- a/data/rules/08_system_modification.yaml
+++ b/data/rules/08_system_modification.yaml
@@ -69,9 +69,10 @@ rules:
       - '\becho\b[^;|&]*>>\s*~/?\.(bashrc|bash_profile|zshrc|profile)'
       - '\btee\s+(-a\s+)?~/?\.(bashrc|bash_profile|zshrc|profile)'
       # SSH authorized_keys
-      - '>>\s*~/?\.(ssh/authorized_keys)'
+      - '>>\s*~/?\.ssh/authorized_keys'
       - '>>\s*\$HOME/\.ssh/authorized_keys'
-      - '\becho\b[^;|&]*>>\s*~/?\.(ssh/authorized_keys)'
+      - '\becho\b[^;|&]*>>\s*~/?\.ssh/authorized_keys'
+      - '\btee\s+(-a\s+)?~/?\.ssh/authorized_keys'
       # Environment files
       - '>>\s*/etc/profile'
       - '>>\s*/etc/bash\.bashrc'
